--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin: 0;
 }
 
 .half-width {
@@ -24,7 +25,7 @@ section {
     width: 70%;
 }
 
-.linl-button {
+.link-button {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     color: white;
@@ -36,4 +37,10 @@ section {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
