--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
-    margin: 0;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -43,4 +47,31 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-left: 5%;
+    padding-left: 20px;
+    border-radius: 5%;
+    box-shadow: 10px 10px 40px gray;
+}
+
+#full-stack-developer {
+    border-left: 7px solid aqua;
+}
+
+#baby-web-developer {
+    border-left: 7px solid indianred;
+}
+
+footer {
+    text-align: center;
 }
